wal-macros/tests/rsx_macro_tests/literals/single_literal_fail.stderr
error: Byte string literals are not supported
 --> tests/rsx_macro_tests/literals/single_literal_fail.rs:4:13
  |
4 |     rsx! { b"val" };
  |             ^^^^^^
