wal-macros/tests/rsx_macro_tests/literals/single_literal_fail.rs
use wal_macros::rsx;

fn main() {
    rsx! { b"val" };
}
